update telephone and directions

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="/src/assets/logo.png">
+    <link rel="icon" href="/src/assets/delta-logo-3.png" class="delta-logo-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Delta Car Care - Car Wash in Thanjavur</title>
   </head>
@@ -11,3 +11,9 @@
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
+<style scoped>
+.delta-logo-icon {
+  width: 150px;
+  height: 150px;
+}
+</style>
